updated lds ontology name space, README, and other small fixes